# DiizerU

./: .gitignore  ARCHITECTURE.md  README.md  SECURITY.md
client/: Makefile  README.md
client/content/: FONT-LICENSE.txt  README.md
client/meta/: README.md
client/src/: main.cpp
client/src/audio/: adpcm.h  deezer_decrypt.cpp  deezer_decrypt.h  iaudio_backend.h  minimp3_impl.cpp  sdl_audio_backend.cpp  sdl_audio_backend.h  stream_player.cpp  stream_player.h
client/src/core/: deezer_client.cpp  deezer_client.h  models.h  music_client.h  pairing.cpp  pairing.h  relay_client.cpp  relay_client.h  session_store.cpp  session_store.h
client/src/platform/: platform.cpp  platform.h
client/src/ui/: browser.cpp  browser.h  pairing_screen.cpp  pairing_screen.h  text.cpp  text.h
client/tests/: audio_test.cpp  host_test.cpp  run.sh
deploy/: Dockerfile  docker-compose.yml
deploy/caddy/: Caddyfile
deploy/scripts/: deploy.sh  provision.sh
deploy/systemd/: diizeru-relay.service
docs/: SELF-HOST.md
proto/: README.md  openapi.yaml  ws-events.schema.json
relay/: Cargo.toml  README.md
relay/src/: config.rs  crypto.rs  error.rs  main.rs  model.rs  state.rs
relay/src/api/: admin.rs  browse.rs  meta.rs  mod.rs  pairing.rs  playback.rs  stream.rs
relay/src/audio/: librespot_source.rs  mod.rs  tone.rs
relay/src/auth/: mod.rs  pairing.rs
relay/src/deezer/: client.rs  crypto.rs  decode.rs  mod.rs  proxy.rs  source.rs
relay/src/proxy/: mod.rs
relay/src/session/: mod.rs
relay/src/store/: mod.rs
