[package]
name = "diizeru-relay"
version = "0.1.0"
edition = "2021"
description = "DiizerU relay: OAuth + allowlist + per-user librespot session -> PCM stream"
license = "AGPL-3.0-or-later"

[features]
# Default build is curl-testable today via the built-in tone AudioSource.
# Enable `librespot` for the real per-user Spotify audio source (heavy compile).
default = []
librespot = ["dep:librespot-core", "dep:librespot-playback"]
# Deezer audio source: client-side-derivable key (sidesteps Spotify's audio-key
# block). Downloads encrypted MP3/FLAC, Blowfish-decrypts, decodes via symphonia.
deezer = ["dep:md-5", "dep:blowfish", "dep:symphonia"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["serde", "formatting"] }
dotenvy = "0.15"
urlencoding = "2"
async-stream = "0.3"
bytes = "1"
futures-core = "0.3"

# Real audio source (feature = "librespot"). git main may carry audio-key fixes
# not in 0.8.0. rustls + no system audio backends (we provide our own Sink).
librespot-core = { git = "https://github.com/librespot-org/librespot", optional = true, default-features = false, features = ["rustls-tls-native-roots"] }
librespot-playback = { git = "https://github.com/librespot-org/librespot", optional = true, default-features = false, features = ["rustls-tls-native-roots"] }

# Deezer source (feature = "deezer").
md-5 = { version = "0.10", optional = true }
blowfish = { version = "0.9", optional = true }
symphonia = { version = "0.5", optional = true, default-features = false, features = ["mp3", "flac"] }

[profile.release]
opt-level = 2
