[package]
name = "diizeru-relay"
version = "0.1.0"
edition = "2021"
description = "DiizerU relay: Deezer source + per-user session -> ADPCM stream for the Wii U"
license = "AGPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["serde", "formatting"] }
dotenvy = "0.15"
urlencoding = "2"
async-stream = "0.3"
bytes = "1"
futures-core = "0.3"

# Deezer audio source.
md-5 = "0.10"
blowfish = "0.9"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "flac"] }

[profile.release]
opt-level = 2
